Make windows extend JavaFxWindow
Motivation:
Bring common behavior to all WPCleaner windows